test/spec_vectors/type-subtyping/fail/module_59.wat
(module (type $a0 (sub (array i32))) (type $s0 (sub $a0 (struct))))